--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>校园动态</title>
+    <title>{{ title|default:'老男孩教育' }}</title>
     <!-- animate动画库 -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.7.0/animate.min.css">
     <!-- 全局样式 -->
